--- a/index.html
+++ b/index.html
@@ -209,16 +209,28 @@
         <header>
           <nav class="header-menu">
             <ul>
-              <li class="header-menu__link header-menu__link--active">
+              <li
+                class="header-menu__link header-menu__link--active"
+                onclick="menuItemSelected(event.currentTarget)"
+              >
                 <a href="#">Overview</a>
               </li>
-              <li class="header-menu__link">
+              <li
+                class="header-menu__link"
+                onclick="menuItemSelected(event.currentTarget)"
+              >
                 <a href="#">Inventory</a>
               </li>
-              <li class="header-menu__link">
+              <li
+                class="header-menu__link"
+                onclick="menuItemSelected(event.currentTarget)"
+              >
                 <a href="#">Services</a>
               </li>
-              <li class="header-menu__link">
+              <li
+                class="header-menu__link"
+                onclick="menuItemSelected(event.currentTarget)"
+              >
                 <a href="#">Contractors</a>
               </li>
             </ul>
@@ -227,6 +239,8 @@
             </a>
           </nav>
         </header>
+
+        <div id="selected-border"></div>
 
         <section class="booking-status">
           <div class="booking-status__icon">
@@ -401,6 +415,8 @@
         </section>
       </article>
     </main>
+
     <script src="https://kit.fontawesome.com/dfec5d1014.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
